--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <!-- fav icon + nome -->
     <title>INTV BRASIL</title>
-
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
